# claude-ai-optimization

./: .gitignore  CLAUDE.md  Makefile  README-AUTO-MERGE-TEST.md  README.md  TRASH-FILES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  ci.yml  debug-smart-merge.yml  issue-automation.yml  release.yml  security.yml  simple-smart-merge.yml  smart-auto-merge.yml
PRPs/: README.md  claude-ai-optimization-implementation.md
agents/: github-issue-manager.md  issue-executor.py
azure/: PRODUCTION.md  README-AUTO-MERGE-TEST.md  README.md  SMART_AUTO_MERGE_GUIDE.md  TEMP_FIX.md  WEBHOOK-SETUP.md  WORKFLOW_AUTOMATION_GUIDE.md  app-simple.py  issue_intelligence.py  requirements-dev.txt  status-manager.py
azure/.github/workflows/: smart-auto-merge.yml
azure/scripts/: analyze_pr_for_automerge.py  generate_compliance_report.py  generate_security_dashboard.py
azure/tests/: conftest.py
azure/tests/e2e/: test_e2e_placeholder.py
azure/tests/integration/: test_github_integration.py
azure/tests/load/: load-test.js  locustfile.py
azure/tests/performance/: test_benchmarks.py
azure/tests/postman/: azure-automation.postman_collection.json  production.postman_environment.json
azure/tests/unit/: test_issue_analysis.py
configs/: enhanced-config.yaml  issue-automation-config.yaml  optimal-agent-config.yaml
docs/: implementation-guide.md
integrations/: github-actions.yml  github-webhook-handler.py  mcp-config.json
monitoring/: cost-tracker.py  usage-dashboard.py
scripts/: intelligent_pr_analyzer.py  setup-optimal-agents.py  test-issue-automation.py
src/claude_ai_optimization/: __init__.py  azure.py
templates/: claude-base.md
validation/: performance-validator.py
